--- a/static/index.html
+++ b/static/index.html
@@ -68,6 +68,14 @@
                             </div>
                         </div>
                     </div>
+                    <!-- NEW CARD FOR THE TABLE -->
+                    <div class="card detail-metrics">
+                        <h3>Detailed Metrics</h3>
+                        <div id="detail-metrics-content">
+                            <!-- Table will be injected here by JS -->
+                            <p>Run a health check to see detailed metrics.</p>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
