--- a/static/index.html
+++ b/static/index.html
@@ -51,29 +51,32 @@
                     <h2 id="detail-server-name">Server Details</h2>
                 </div>
                 <div class="detail-grid">
+                    <!-- Column 1: Server Info -->
                     <div class="card detail-info">
                         <h3>Server Info</h3>
                         <div id="detail-info-content"></div>
                          <button id="run-single-btn" class="btn btn-primary">Run Health Check</button>
                     </div>
-                    <div class="card detail-charts">
-                        <div class="charts-grid">
-                            <div class="chart-container">
-                                <h3>CPU Usage (%)</h3>
-                                <canvas id="cpuChart"></canvas>
-                            </div>
-                            <div class="chart-container">
-                                <h3>Memory Usage (MB)</h3>
-                                <canvas id="memChart"></canvas>
+
+                    <!-- Column 2: A wrapper for both charts and metrics -->
+                    <div class="detail-main-panel">
+                        <div class="card detail-charts">
+                            <div class="charts-grid">
+                                <div class="chart-container">
+                                    <h3>CPU Usage (%)</h3>
+                                    <canvas id="cpuChart"></canvas>
+                                </div>
+                                <div class="chart-container">
+                                    <h3>Memory Usage (MB)</h3>
+                                    <canvas id="memChart"></canvas>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- NEW CARD FOR THE TABLE -->
-                    <div class="card detail-metrics">
-                        <h3>Detailed Metrics</h3>
-                        <div id="detail-metrics-content">
-                            <!-- Table will be injected here by JS -->
-                            <p>Run a health check to see detailed metrics.</p>
+                        <div class="card detail-metrics">
+                            <h3>Detailed Metrics</h3>
+                            <div id="detail-metrics-content">
+                                <p>Run a health check to see detailed metrics.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
