--- a/static/index.html
+++ b/static/index.html
@@ -50,7 +50,7 @@
                     <button id="back-to-dashboard-btn" class="btn btn-tertiary">← Back to Dashboard</button>
                     <h2 id="detail-server-name">Server Details</h2>
                 </div>
-                <div class="detail-grid">
+                <div class="detail-grid-container">
                     <div class="card detail-info">
                         <h3>Server Info</h3>
                         <div id="detail-info-content"></div>
