--- a/static/index.html
+++ b/static/index.html
@@ -61,10 +61,12 @@
                             <div class="chart-container">
                                 <h3>CPU Usage (%)</h3>
                                 <canvas id="cpuChart"></canvas>
+                                <div class="no-data-message">No data available. Run a health check.</div>
                             </div>
                             <div class="chart-container">
                                 <h3>Memory Usage (MB)</h3>
                                 <canvas id="memChart"></canvas>
+                                <div class="no-data-message">No data available. Run a health check.</div>
                             </div>
                         </div>
                     </div>
